# password-manager

./: .gitignore  CMakeLists.txt  README.md
include/: cli.h  crypto.h  secret.h  secure_memory.h  serial.h  vault.h
src/: cli.cpp  crypto.cpp  main.cpp  secure_memory.cpp  vault.cpp
